version/0.16/_sources/api/solver/_autosummary/settings/line_surface.rst.txt
:orphan:

.. _line_surface:

line_surface
============

.. autoclass:: ansys.fluent.core.solver.settings_232.line_surface.line_surface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`line_surface_child <line_surface_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_3>`       'surfaces' child.

============================   =====================

